--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="logo">
                 <a href="#"><img src="AZoom.png" alt="Car Logo" style="width: 100px; height: 100px;"/></a>
             </div>
+            <div class="menu-icon" onclick="toggleMenu()">&#9776;</div> <!-- Hamburger Icon -->
             <!-- Navigation Links -->
             <ul class="nav-links">
                 <li><a href="#" id="home">Home</a></li>
